* @version-control +0.1.0 deprecated option group (see option allowListMerging) * @version-control +0.1.0 option onItemMaxDepth * @version-control +0.1.0 option onItemSetParent * @version-control +0.1.0 option onItemUnsetParent * @version-control +0.0.5 fix item id #19 * @version-control +0.0.1 fix max depth item add child item * @version-control +0.0.3 fix stuck last child item * @version-control +0.0.5 fix ghost first movement * @version-control +0.0.5  fix telepathic child dragging * @version-control +0.0.5 fix disappearing list when mixing items from multiple instances * @version-control +0.1.0 feature restrict list merging * @version-control +0.1.0 feature onItemSetParent event listener * @version-control +0.1.0 feature onItemSetParent event listener * @version-control +0.1.0 feature listen for onItemMaxDepth events

--- a/jquery.domenu-0.95.77.css
+++ b/jquery.domenu-0.95.77.css
@@ -250,8 +250,8 @@
   margin:          5px 0;
   padding:         0;
   min-height:      30px;
-  background:      #f2fbff;
-  border:          1px dashed #b6bcbf;
+  background: #D6F2FF;
+  border: 1px dashed #6C9AB1;
   box-sizing:      border-box;
   -moz-box-sizing: border-box;
 }
